--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,15 @@
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
+    "@fastify/multipart": "^9.3.0",
     "@types/node": "^25.0.3",
+    "adm-zip": "^0.5.16",
     "fastify": "^5.6.2",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@types/adm-zip": "^0.5.7"
   }
 }
